# pyrsistent

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.txt  LICENCE.mit  MANIFEST.in  Makefile  README.md  README.rst  _pyrsistent_version.py  build_run.sh  coderabbit_trigger.txt  doctests.sh  foo.txt  memcheck.py  meminfo.txt  output  print_out.txt  pvectorcmodule.c  pyproject.toml  pyrsistent.py  pyrsistent_map_test.py  pyrsistent_performance_test.py  pyrsistent_set_test.py  pyrsistent_types.py  pyrsistent_vector_test.py  pyrsistentc_vector_test.py  pyrsistentmodule.c  pytest.ini  requirements.txt  setup.cfg  setup.py  simple_utils.py  temp.txt  tox.ini
benchmarks/: pmap.py  pvector.py  pvector_27.result
docs/: Makefile  make.bat  requirements.txt
experiments/: build_run.sh  memcheck.py  pyrsistentmodule.c  segfault.txt
performance_suites/: pmap.py  pmap_27.result  pvector.py
pyrsistent/: __init__.py  __init__.pyi  _checked_types.py  _compat.py  _field_common.py  _helpers.py  _immutable.py  _pbag.py  _pbimap.py  _pclass.py  _pdeque.py  _plist.py  _pmap.py  _precord.py  _pset.py  _pvector.py  _toolz.py  _transformations.py  _utils.py  checked_types.py  helpers.py  immutable.py  pbag.py  pdeque.py  pmap.py  precord.py  pset.py  pvector.py  test_temp.py  transformations.py  typing.py  typing.pyi
tests/: bag_test.py  checked_map_test.py  checked_pmap_test.py  checked_set_test.py  checked_vector_test.py  class_test.py  deque_test.py  field_test.py  freeze_test.py  hypothesis_sequence_test.py  hypothesis_vector_test.py  immutable_object_test.py  list_test.py  (+19 more)
(+13 files in other folders)
