[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


# coverage
# --------

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = [
    "pyrsistent",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 92

[tool.coverage.html]
directory = "htmlcov/"
skip_covered = false
